--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<body>
 		<!--banner including logo and h1 teaser-->
 		<header class="banner">
-			<div class="logo"><a href="index.html"><img src="assets/img/logo.png" alt=""></a></div>
+			<div class="logo"><a href="index.html"><img src="assets/img/logo.png alt="circa vintage logo" alt=""></a></div>
 			<ul class="social-media">
-				<li><a href="#"><img src="assets/img/fb.png" alt="" ></a></li>
-				<li><a href="#"><img src="assets/img/tw.png" alt=""></a></li>
-				<li><a href="#"><img src="assets/img/ig.png" alt=""></a></li>
+				<li><a href="#"><img src="assets/img/fb.png" alt="facebook" ></a></li>
+				<li><a href="#"><img src="assets/img/tw.png" alt="twitter"></a></li>
+				<li><a href="#"><img src="assets/img/ig.png" alt="instagram"></a></li>
 			</ul>
 			<div><h1>GO BACK A <strong>LITTLE</strong> IN TIME.</h1></div>
 			<div class="icon">
@@ -33,8 +33,8 @@
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-center">
-						<li><a href="builds/html/men.html">MEN</a></li>
-						<li><a href="builds/html/women.html">WOMEN</a></li>
+						<li><a href="builds/html/men.html" title="mens clothing vintage>MEN</a></li>
+						<li><a href="builds/html/women.html" title="womens clothing vintage">WOMEN</a></li>
 						<li><a href="builds/html/about.html">ABOUT</a></li>
 						<li><a href="#contact">CONTACT</a></li>
 					</ul>
@@ -47,31 +47,31 @@
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="assets/img/carousel2.jpg" alt="">
+						<img src="assets/img/carousel2.jpg" alt="vintage chairs">
 						<div class="carousel-caption">
 							<h1>Bring <strong>back</strong> the classics.</h1>
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/carousel1.jpg" alt="">
+						<img src="assets/img/carousel1.jpg" alt="classic clothes">
 						<div class="carousel-caption">
 							<h1>Bring <strong>back</strong> the classics.</h1>
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/carousel5.jpg" alt="">
+						<img src="assets/img/carousel5.jpg" alt="vintage outfits">
 						<div class="carousel-caption">
 							<h1>Bring <strong>back</strong> the classics.</h1>
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/carousel4.jpg" alt="">
+						<img src="assets/img/carousel4.jpg" alt="sell vintage materials">
 						<div class="carousel-caption">
 							<h1>Bring <strong>back</strong> the classics.</h1>
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/carousel6.jpg" alt="">
+						<img src="assets/img/carousel6.jpg" alt="classy vintage">
 						<div class="carousel-caption">
 							<h1>Bring <strong>back</strong> the classics.</h1>
 						</div>
@@ -86,7 +86,7 @@
 				<div id="sidebar" class="col-lg-4 col-md-4 col-sm-4">
 					<div class="first-section">
 						<h1>ABOUT <strong>CIRCAVINTAGE</strong></h1>
-						<p>Circa Vintage was first developed as a shop in 2006 by Anne Morales selling vintage collections of her grandparents. From the usual clothes to collectibles such as vinyl, old recorders and posters, the shop grew into a bigger one extending into three branches in Visayas and Mindanao. The shop also appraises vintage collections which can be exchanged for an item in the shop; similar to a barter system. The shop has operated for over ten years and will be so for the succeeding years. </p>
+						<p>Circa Vintage was first developed as an online shop in 2006 by Anne Morales selling vintage collections of her grandparents. From the usual clothes to collectibles such as vinyl, old recorders and posters, the shop stood still as an online shop catering services to buy and sell vintage materials all over Manila and some regions. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam iaculis metus nec dolor elementum pulvinar et vel lectus. </p>
 						<p>Know more</p>
 						</div>
 						<div class="second-section">
@@ -102,8 +102,8 @@
 									</div>
 									<div class="panel-collapse collapse" id="first">
 										<div class="panel-body">
-											<img src="../../assets/img/menvintage1.jpg" class="img-thumbnail" alt="">
-											<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam iaculis metus nec dolor elementum pulvinar et vel lectus.</p>
+											<img src="../../assets/img/menvintage1.jpg" class="img-thumbnail" alt="Classic brown sweater">
+											<p>Classic brown sweater primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam iaculis metus nec dolor elementum pulvinar et vel lectus.</p>
 										</div>
 									</div>
 								</div>
@@ -117,8 +117,8 @@
 									</div>
 									<div class="panel-collapse collapse" id="second">
 										<div class="panel-body">
-											<img src="../../assets/img/femalevintage1.jpg" class="img-thumbnail" alt="">
-											<p>Pie cake icing tootsie roll macaroon brownie I love dragee. Jujubes liquorice tootsie roll tootsie roll. Pie biscuit jujubes gingerbread gummi bears cupcake lollipop bonbon. Marzipan apple pie gingerbread gingerbread. </p>
+											<img src="../../assets/img/femalevintage1.jpg" class="img-thumbnail" alt="classic plain white sleeveless shirt">
+											<p>Vintage plain white sleeveless shirt and colorful long skirt tootsie roll macaroon brownie I love dragee. Jujubes liquorice tootsie roll tootsie roll. Pie biscuit jujubes gingerbread gummi bears cupcake lollipop bonbon. Marzipan apple pie gingerbread gingerbread. </p>
 										</div>
 									</div>
 								</div>
@@ -134,18 +134,18 @@
 										<div class="panel-body">
 											<table>
 												<tr>
-													<td><img src="../../assets/img/femalevintage2.jpg" class="img-thumbnail" alt=""></td>
-													<td><img src="../../assets/img/femalevintage2.jpg" class="img-thumbnail" alt=""></td>
-													<td><img src="../../assets/img/femalevintage2.jpg" class="img-thumbnail" alt=""></td>
+													<td><img src="../../assets/img/femalevintage1.jpg" class="img-thumbnail" alt="clothes"></td>
+													<td><img src="../../assets/img/femalevintage2.jpg" class="img-thumbnail" alt="female clothes"></td>
+													<td><img src="../../assets/img/menvintage2.jpg" class="img-thumbnail" alt="classic vintage clothes"></td>
 												</tr>
 												<tr>
-													<td><img src="../../assets/img/femalevintage2.jpg" class="img-thumbnail" alt=""></td>
-													<td><img src="../../assets/img/femalevintage2.jpg" class="img-thumbnail" alt=""></td>
-													<td><img src="../../assets/img/femalevintage2.jpg" class="img-thumbnail" alt=""></td>
+													<td><img src="../../assets/img/men10.jpg" class="img-thumbnail" alt="classic clothes"></td>
+													<td><img src="../../assets/img/women11.jpg" class="img-thumbnail" alt="vintage materials"></td>
+													<td><img src="../../assets/img/women3.jpg" class="img-thumbnail" alt="vintage"></td>
 												</tr>
 												
 											</table>
-											<p>Sweet I love lemon drops lollipop. Candy canes soufflé lemon drops cotton candy jujubes. Danish oat cake I love pastry gummi bears I love jelly lemon drops pie.</p>
+											<p>Assorted collections from clothes to vintage materials sweet I love lemon drops lollipop. Candy canes soufflé lemon drops cotton candy jujubes. Danish oat cake I love pastry gummi bears I love jelly lemon drops pie.</p>
 										</div>
 									</div>
 								</div>
@@ -158,8 +158,8 @@
 							<img src="assets/img/blog1.jpg" alt="">
 							<h1>WHY WE CHOOSE VINTAGE?</h1>
 							<p>BY CRISTIAN G. DIZON</p>
-							<p>Jowabelles at nang boyband tungril oblation Cholo at ang 48 years at bakit katol jongoloids bakit Gino tamalis at bakit fayatollah kumenis mabaho , kasi kasi Mike conalei valaj bakit bokot doonek bigalou at nang shala shonga-shonga chopopo keme keme jowa waz kemerloo sa antibiotic chuckie tamalis neuro majubis Mike bongga na ng shontis jupang-pang warla chipipay conalei ano nang ano majubis sudems at nang kabog at nang bonggakea bigalou pamenthol doonek ano conalei shonget dites nang bakit krung-krung pranella dites thunder jongoloids doonek ano biway chapter na ang chuckie tanders kasi at kasi shala na ang at nang Mike at ang kasi bongga shogal jongoloids at bakit kasi at bakit guash shokot ganders biway.</p>
-							<p>Na chopopo keme jowabella kasi wrangler kabog majonders keme boyband keme shonga shonga-shonga bongga at sudems ang kemerloo daki kemerloo otoko cheapangga neuro na ang shonget ng sa chopopo</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tempus nisl lorem, sit amet volutpat nunc condimentum quis. Aliquam ut sollicitudin arcu, ac vestibulum turpis. Nunc nec lacus nulla. Proin sagittis dolor vitae turpis commodo consectetur. Nunc eleifend fringilla aliquam. Ut egestas magna tortor, at elementum nunc egestas cursus. Sed sed massa quam. Curabitur semper tortor sit amet mi bibendum, vel aliquet massa sodales. In est dolor, accumsan at ex nec, aliquet malesuada dolor. Curabitur mattis, quam et tempus suscipit, dui arcu malesuada nibh, porttitor posuere eros mi vel lectus. Fusce nunc sapien, fermentum vitae tempus vitae, sodales nec metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut hendrerit arcu at quam malesuada, sed imperdiet diam congue. Aenean vitae libero rutrum, mattis erat vel, sollicitudin velit. Sed consequat tempus est eget faucibus.</p>
+							<pIn mauris nunc, facilisis vitae augue sit amet, rhoncus varius odio. Etiam aliquam tortor magna, quis molestie dolor elementum eget. Integer rhoncus est quis diam vulputate cursus. Vestibulum a nulla vel leo iaculis bibendum id at dui.</p>
 							<p><span class="glyphicon glyphicon-triangle-bottom"></span></p>
 							<hr>
 						</div>
@@ -169,8 +169,8 @@
 								<div class="thumbnail">
 									<img src="assets/img/men6.jpg">				
 									<div class="caption">
-										<h3>Kendall Jenner</h3>
-										<h5 style="padding-top:10px">P500.00</h5>
+										<h3>Distressed French Terry Flannels</h3>
+										<h5 style="padding-top:10px">8500.00</h5>
 										<p>Ham pig ball tip ribeye landjaeger pork loin beef ribs short ribs chicken filet mignon. Chuck t-bone sirloin salami landjaeger brisket spare ribs meatloaf biltong shoulder rump hamburger alcatra beef jerky. Filet mignon ball tip tenderloin drumstick turducken, cow salami.</p>
 									</div>
 									<p><span class="glyphicon glyphicon-triangle-bottom"></span></p>
@@ -182,8 +182,8 @@
 								<div class="thumbnail">
 									<img src="assets/img/men7.jpg">				
 									<div class="caption">
-										<h3>Kendall Jenner</h3>
-										<h5 style="padding-top:10px">P500.00</h5>
+										<h3>Classic Vintage Hoodie</h3>
+										<h5 style="padding-top:10px">P1,000.00</h5>
 										<p>Ham pig ball tip ribeye landjaeger pork loin beef ribs short ribs chicken filet mignon. Chuck t-bone sirloin salami landjaeger brisket spare ribs meatloaf biltong shoulder rump hamburger alcatra beef jerky. Filet mignon ball tip tenderloin drumstick turducken, cow salami.</p>
 									</div>
 									<p><span class="glyphicon glyphicon-triangle-bottom"></span></p>
@@ -195,8 +195,8 @@
 								<div class="thumbnail">
 									<img src="assets/img/men8.jpg">				
 									<div class="caption">
-										<h3>Kendall Jenner</h3>
-										<h5 style="padding-top:10px">P500.00</h5>
+										<h3>Classic Americano Long Sleeves/h3>
+										<h5 style="padding-top:10px">P700.00</h5>
 										<p>Ham pig ball tip ribeye landjaeger pork loin beef ribs short ribs chicken filet mignon. Chuck t-bone sirloin salami landjaeger brisket spare ribs meatloaf biltong shoulder rump hamburger alcatra beef jerky. Filet mignon ball tip tenderloin drumstick turducken, cow salami.</p>
 									</div>
 									<p><span class="glyphicon glyphicon-triangle-bottom"></span></p>
@@ -211,8 +211,8 @@
 								<div class="thumbnail">
 									<img src="assets/img/women3.jpg">				
 									<div class="caption">
-										<h3>Kendall Jenner</h3>
-										<h5 style="padding-top:10px">P500.00</h5>
+										<h3>Classic Gray Blouse and Gray Skirt</h3>
+										<h5 style="padding-top:10px">P800.00</h5>
 										<p>Ham pig ball tip ribeye landjaeger pork loin beef ribs short ribs chicken filet mignon. Chuck t-bone sirloin salami landjaeger brisket spare ribs meatloaf biltong shoulder rump hamburger alcatra beef jerky. Filet mignon ball tip tenderloin drumstick turducken, cow salami.</p>
 									</div>
 									<p><span class="glyphicon glyphicon-triangle-bottom"></span></p>
@@ -224,7 +224,7 @@
 								<div class="thumbnail">
 									<img src="assets/img/women4.jpg">				
 									<div class="caption">
-										<h3>Kendall Jenner</h3>
+										<h3>Slim Black Straight Dress</h3>
 										<h5 style="padding-top:10px">P500.00</h5>
 										<p>Ham pig ball tip ribeye landjaeger pork loin beef ribs short ribs chicken filet mignon. Chuck t-bone sirloin salami landjaeger brisket spare ribs meatloaf biltong shoulder rump hamburger alcatra beef jerky. Filet mignon ball tip tenderloin drumstick turducken, cow salami.</p>
 									</div>
@@ -237,8 +237,8 @@
 								<div class="thumbnail">
 									<img src="assets/img/women5.jpg">				
 									<div class="caption">
-										<h3>Kendall Jenner</h3>
-										<h5 style="padding-top:10px">P500.00</h5>
+										<h3>Straight Black Dress with Black Hat</h3>
+										<h5 style="padding-top:10px">P1,000.00</h5>
 										<p>Ham pig ball tip ribeye landjaeger pork loin beef ribs short ribs chicken filet mignon. Chuck t-bone sirloin salami landjaeger brisket spare ribs meatloaf biltong shoulder rump hamburger alcatra beef jerky. Filet mignon ball tip tenderloin drumstick turducken, cow salami.</p>
 									</div>
 									<p><span class="glyphicon glyphicon-triangle-bottom"></span></p>
