updated 50% alt tags for SEO

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<!--banner including logo and h1 teaser-->
 		<header class="banner">
-			<div class="logo"><a href="index.html"><img src="assets/img/logo.png" alt="circa vintage logo"></a></div>
+			<div class="logo"><a href="index.html"><img src="assets/img/logo.png" alt="circa vintage logo classic"></a></div>
 			<ul class="social-media">
 				<li><a href="#"><img src="assets/img/fb.png" alt="facebook" ></a></li>
 				<li><a href="#"><img src="assets/img/tw.png" alt="twitter"></a></li>
